# star-engine

./: .gitignore  CMakeLists.txt
assets/shaders/: bgfx_compute.sh  f_imgui.sc  f_simple.sc  fs_pbr.sc  fs_unlit.sc  v_imgui.sc  v_simple.sc  varying.def.sc  vs_default.sc
editor/: CMakeLists.txt  main.cpp
editor/src/: editor_app.cpp  editor_app.hpp  editor_context.hpp  main.cpp
editor/src/panels/: console_panel.cpp  console_panel.hpp  editor_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
include/star/: export.hpp
include/star/app/: app.hpp  app_component.hpp  app_fwd.hpp  imgui_component.hpp  input.hpp  window.hpp
include/star/core/: common.hpp  math.hpp
include/star/graphics/: shaders.hpp
include/star/render/: forward_renderer.hpp  material.hpp  mesh.hpp  render_fwd.hpp  renderer.hpp  renderer_components.hpp  scene_renderer.hpp  shader.hpp  texture.hpp
include/star/scene/: camera.hpp  entity.hpp  entity_registry.hpp  scene.hpp  transform.hpp
include/star/utils/: string_utils.hpp
include/star/utils/memory/: optional_ref.hpp
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt  main.cpp
samples/imgui/: CMakeLists.txt  main.cpp
scripts/: bgfx.cmake  catch2.cmake  entt.cmake  freetype.cmake  glm.cmake  imgui.cmake  sdl3.cmake  spdlog.cmake
src/: main.cpp
src/app/: app.cpp  imgui_component.cpp  input.cpp  window.cpp
src/app/detail/: imgui.hpp
src/core/: common.hpp
src/render/: forward_renderer.cpp  material.cpp  mesh.cpp  renderer.cpp  renderer_components.cpp  scene_renderer.cpp  shader.cpp  texture.cpp
src/scene/: camera.cpp  entity.cpp  entity_registry.cpp  register_components.cpp  scene.cpp  transform.cpp
src/utils/: string_utils.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/src/: main.cpp
